# hspf_utils

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BADGES.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  README.rst  VERSION  detox  pip_requirements.txt  publish.py  pyproject.toml  setup.py
docs/: command_line.rst  conf.py  function_summary.rst
docsrc/: command_line.rst  conf.py  function_summary.rst  index.rst
hspf_utils/: __init__.py  hspf_utils.py
src/hspf_utils/: __init__.py  hspf_utils.py
tests/: data_03c_summary_flow.csv  test_03c_summary_flow.py
tests/03lsjr_a/1995_Scenario/: 3a_SJRB_1995.uci  3a_hspf.sup  3a_land.hbn
tests/03lsjr_a/2014_Scenario/: 3a_SJRB_2014.uci  3a_land.hbn
tests/03lsjr_a/2030_Scenario/: 3a_SJRB_2030.uci  3a_land.hbn
tests/03lsjr_b/1995_Scenario/: 3b_SJRB_1995.uci  3b_land.hbn
tests/03lsjr_b/2014_Scenario/: 3b_SJRB_2014.uci  3b_land.hbn
tests/03lsjr_b/2030_Scenario/: 3b_SJRB_2030.uci  3b_land.hbn
tests/03lsjr_c/1995_Scenario/: 3c_SJRB_1995.uci  3c_land.hbn
tests/03lsjr_c/2014_Scenario/: 3c_SJRB_2014.uci  3c_land.hbn
tests/03lsjr_c/2030_Scenario/: 3c_SJRB_2030.uci  3c_land.hbn
tests/03lsjr_d/1995_Scenario/: 3d_SJRB_1995.uci  3d_land.hbn
tests/03lsjr_d/2014_Scenario/: 3d_SJRB_2014.uci  3d_land.hbn
tests/03lsjr_d/2030_Scenario/: 3d_SJRB_2030.uci  3d_land.hbn
tests/03lsjr_e/1995_Scenario/: 3e_SJRB_1995.uci  3e_land.hbn
tests/03lsjr_e/2014_Scenario/: 3e_SJRB_2014.uci  3e_land.hbn
tests/03lsjr_e/2030_Scenario/: 3e_SJRB_2030.uci  3e_land.hbn
tests/03lsjr_f/1995_Scenario/: 3f_SJRB_1995.uci  3f_land.hbn
tests/03lsjr_f/2014_Scenario/: 3f_SJRB_2014.uci  3f_land.hbn
tests/03lsjr_f/2030_Scenario/: 3f_SJRB_2030.uci  3f_land.hbn
tests/03lsjr_g/1995_Scenario/: 3g_SJRB_1995.uci  3g_land.hbn
tests/03lsjr_g/2014_Scenario/: 3g_SJRB_2014.uci  3g_land.hbn
tests/03lsjr_g/2030_Scenario/: 3g_SJRB_2030.uci  3g_land.hbn
tests/03lsjr_h/1995_Scenario/: 3h_SJRB_1995.uci  3h_land.hbn
tests/03lsjr_h/2014_Scenario/: 3h_SJRB_2014.uci  3h_land.hbn
tests/03lsjr_h/2030_Scenario/: 3h_SJRB_2030.uci  3h_land.hbn
tests/03lsjr_i/1995_Scenario/: 3i_SJRB_1995.uci  3i_land.hbn
tests/03lsjr_i/2014_Scenario/: 3i_SJRB_2014.uci  3i_land.hbn
tests/03lsjr_i/2030_Scenario/: 3i_SJRB_2030.uci  3i_land.hbn
tests/03lsjr_j/1995_Scenario/: 3j_SJRB_1995.uci  3j_land.hbn
tests/03lsjr_j/2014_Scenario/: 3j_SJRB_2014.uci  3j_land.hbn
tests/03lsjr_j/2030_Scenario/: 3j_SJRB_2030.uci  3j_land.hbn
tests/03lsjr_k/1995_Scenario/: 3k_SJRB_1995.uci  3k_land.hbn
tests/03lsjr_k/2014_Scenario/: 3k_SJRB_2014.uci  3k_land.hbn
tests/03lsjr_k/2030_Scenario/: 3k_SJRB_2030.uci  3k_land.hbn
tests/04msjr_a/1995_Scenario/: 4a_land.hbn  sjrb_4a_SJRB_1995.uci
tests/04msjr_a/2014_Scenario/: 4a_land.hbn  sjrb_4a_SJRB_2014.uci
tests/04msjr_a/2030_Scenario/: 4a_land.hbn  sjrb_4a_SJRB_2030.uci
tests/04msjr_b/1995_Scenario/: 4b_land.hbn  sjrb_4b_SJRB_1995.uci
tests/04msjr_b/2014_Scenario/: 4b_land.hbn  sjrb_4b_SJRB_2014.uci
tests/04msjr_b/2030_Scenario/: 4b_land.hbn  sjrb_4b_SJRB_2030.uci
tests/04msjr_c/1995_Scenario/: 4c_land.hbn  sjrb_4c_SJRB_1995.uci
tests/04msjr_c/2014_Scenario/: 4c_land.hbn  sjrb_4c_SJRB_2014.uci
tests/04msjr_c/2030_Scenario/: 4c_land.hbn  sjrb_4c_SJRB_2030.uci
tests/04msjr_d/1995_Scenario/: 4d_land.hbn  sjrb_4d_SJRB_1995.uci
tests/04msjr_d/2014_Scenario/: 4d_land.hbn  sjrb_4d_SJRB_2014.uci
tests/04msjr_d/2030_Scenario/: 4d_land.hbn  sjrb_4d_SJRB_2030.uci
tests/04msjr_e/1995_Scenario/: 4e_land.hbn  sjrb_4e_SJRB_1995.uci
tests/04msjr_e/2014_Scenario/: 4e_land.hbn  sjrb_4e_SJRB_2014.uci
tests/04msjr_e/2030_Scenario/: 4e_land.hbn  sjrb_4e_SJRB_2030.uci
tests/05lkge_abcd/1995_Scenario/: 5abcd_SJRB_1995.uci  5abcd_land.hbn
tests/05lkge_abcd/2014_Scenario/: 5abcd_SJRB_2014.uci  5abcd_land.hbn
tests/05lkge_abcd/2030_Scenario/: 5abcd_SJRB_2030.uci  5abcd_land.hbn
tests/06usjr/1995_Scenario/: 6Main1_SJRB_1995.uci  6Main1_land.hbn  6Main2_SJRB_1995.uci  6Main2_land.hbn  6a_SJRB_1995.uci  6a_land.hbn  6b_SJRB_1995.uci  6b_land.hbn  6c_SJRB_1995.uci  6c_land.hbn  6e_SJRB_1995.uci  6e_land.hbn  6f_SJRB_1995.uci  6f_land.hbn  6g_SJRB_1995.uci  6g_land.hbn  6h_SJRB_1995.uci  6h_land.hbn  6i_SJRB_1995.uci  6i_land.hbn
tests/06usjr/2014_Scenario/: 6Main1_SJRB_2014.uci  6Main1_land.hbn  6Main2_SJRB_2014.uci  6Main2_land.hbn  6a_SJRB_2014.uci  6a_land.hbn  6b_SJRB_2014.uci  6b_land.hbn  6c_SJRB_2014.uci  6c_land.hbn  6e_SJRB_2014.uci  6e_land.hbn  6f_SJRB_2014.uci  6f_land.hbn  6g_SJRB_2014.uci  6g_land.hbn  6h_SJRB_2014.uci  6h_land.hbn  6i_SJRB_2014.uci  6i_land.hbn
tests/06usjr/2030_Scenario/: 6Main1_SJRB_2030.uci  6Main1_land.hbn  6Main2_SJRB_2030.uci  6Main2_land.hbn  6a_SJRB_2030.uci  6a_land.hbn  6b_SJRB_2030.uci  6b_land.hbn  6c_SJRB_2030.uci  6c_land.hbn  6e_SJRB_2030.uci  6e_land.hbn  6f_SJRB_2030.uci  6f_land.hbn  6g_SJRB_2030.uci  6g_land.hbn  6h_SJRB_2030.uci  6h_land.hbn  6i_SJRB_2030.uci  6i_land.hbn
tests/07ockr_bcd/1995_Scenario/: 7bcd_SJRB_1995.uci  7bcd_land.hbn
tests/07ockr_bcd/2014_Scenario/: 7bcd_SJRB_2014.uci  7bcd_land.hbn
tests/07ockr_bcd/2030_Scenario/: 7bcd_SJRB_2030.uci  7bcd_land.hbn
tests/07ockr_e/1995_Scenario/: 7E_SJRB_1995.uci  7e_land.hbn
tests/07ockr_e/2014_Scenario/: 7E_SJRB_2014.uci  (+1 more)
(+20 files in other folders)
