[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[simple]>=8",
    "setuptools>=80"
]

[project]
authors = [
    {email = "tim@cerazone.net", name = "Tim Cera"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules"
] # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
dependencies = [
    "cltoolbox >= 2.0.0",
    "dateparser",
    "hspfbintoolbox",
    "numpy",
    "pandas[excel]",
    "pint",
    "pint-pandas",
    "pydantic",
    "scipy",
    "tabulate",
    "typing-extensions"
]
description = "Command line script and Python library to develop water balance from HSPF models"
dynamic = ["readme", "version"]
keywords = [
    "cli",
    "cli-application",
    "command line",
    "hspf",
    "hydrologic",
    "hydrology",
    "python",
    "script",
    "simulation",
    "time-series"
]
license = {text = "BSD-3-Clause"}
name = "hspf_utils"
requires-python = ">=3.10"

[project.scripts]
hspf_utils = "hspf_utils.hspf_utils:main"

[project.urls]
bitbucket = "https://bitbucket.org/timcera/hspf_utils/src/main/"
documentation = "https://timcera.bitbucket.io/hspf_utils/docs/index.html#hspf_utils-documentation"
github = "https://github.com/timcera/hspf_utils"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version = "6.1.3"
version_files = ["VERSION"]

[tool.isort]
profile = "black"

[tool.jupytext]
formats = "ipynb,py:percent"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
exclude = ["docs*", "examples*", "hspf_utils.tests*", "tests*", "tools*"]
where = ["src"]
